--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <ul>
     {% for recipe in all_recipes%}
         <li>
-            {{recipe.title}}
+           <a href="/recipe/{{recipe.id}}/" >{{recipe.title}}</a>
         </li>
     {%endfor%}
 </ul>
