--- a/templates/recipe_detail.html
+++ b/templates/recipe_detail.html
@@ -1,18 +1,22 @@
-<h1>Recipe detail page  </h1>
+{% extends "base_generic.html" %}
+{% block content %}
 {% if not recipe_detail%}
     <h3> The recipe you are looking is not exist</h3>
-{% else %}
-    <h2>Title:</h2>
-    <h3>{{recipe_detail.title}}</h3>
-    <h2>Author Name:</h2>
-    <h3><a href="/author/{{recipe_detail.author.id}}/" > {{recipe_detail.author.name}}</a></h3>
-    <h2>Time Required:</h2>
-    <h3>{{recipe_detail.time_required}}</h3>
-    <h2>Description:</h2>
-    <p>{{recipe_detail.description}}</p>
-    <h2>Instructions:</h2>
-    <p>{{recipe_detail.instruction}}</p>
+{% else %} 
+    <div class="card">
+    <h5 class="card-header">Recipe detail page </h5>
+    <div class="card-body">
+    <h5 class="card-title">Title : {{recipe_detail.title}}</h5>
+    <h5 class="card-title">Author Name : <a href="/author/{{recipe_detail.author.id}}/" class="btn btn-outline-info"  > {{recipe_detail.author.name}}</a></h5>
+    <h5 class="card-title">Time Required : {{recipe_detail.time_required}}</h5>
+    <h5 class="card-title">Time Required : {{recipe_detail.time_required}}</h5>
+    <h5 class="card-title">Description :  </h5>
+    <p class="card-text">{{recipe_detail.description}}</p>
+    <h5 class="card-title">Instructions :  </h5>
+    <p class="card-text">{{recipe_detail.instruction}}</p>
+   
+      <a href="/" type="button"  class="btn btn-outline-dark">Go Back home</a>
+  </div>
+</div>
 {% endif %}
-
-
-<a href="/">Go back home</a>
+{% endblock %}
