--- a/templates/base_generic.html
+++ b/templates/base_generic.html
@@ -6,26 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    {% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous"> {% endcomment %}
+       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+        integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+
+
     {%load static %}
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css'  %}" type="text/css">
     <link rel="stylesheet" href="{% static 'style.css'  %}" type="text/css">
     <title>Recipes</title>
   
   </head>
+    
   <body>
-  <div class="container">
-  <div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h1 class="display-4">Recipes assessment</h1>
-    <p class="lead">you can create,read,update and delete the Recipes and Authors</p>
-  </div>
-</div>
-
+    {%include 'navbar.html' %}
+    <div class="container">
         {% block content %}
-
         {% endblock %}
-
-</div>
+     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
