--- a/templates/addauthor.html
+++ b/templates/addauthor.html
@@ -7,6 +7,7 @@
             {% csrf_token %}
             {{ form.as_p }}
             <input class="btn btn-success" type="submit" value="Submit">
+            <a href="/author/{{ author.id }}/favorites/"><button>Favorites</button></a>
             <a href="/" type="button" id="go_back_btn" class="btn btn-outline-success">Go Back/Cancel</a>
         </div>
     </form>
