--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -7,6 +7,14 @@
     {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Submit">
+            {% if request.user == recipe.author.user or request.user.is_staff %}
+            <a href="/recipe/{{ recipe.id }}/edit/"><button>Edit</button></a>
+              <br/>
+            {% endif %}
+              {% if request.user.is_authenticated %}
+            <a href="/recipe/{{ recipe.id }}/favorites/"><button>Favorite</button>
+              {% endif %}
+              <br/>
         <a href="/" type="button" id="go_back_btn" class="btn btn-outline-success">Go Back/cancel</a>
      </div>
 </form>
